Fixed case where text overflows outside of toc

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -532,7 +532,7 @@
 
   a {
     display: block;
-    padding: 0.5rem 0.75rem;
+    padding: 0.5rem 0.5rem;
     color: $muted-text-color;
     font-weight: bold;
     line-height: 1.5;
